# sleeping-barber-qt

./: .gitignore  CMakeLists.txt  DesignNote.md  Dockerfile  LICENSE.md  README.md
.github/workflows/: buildAndTest.yml  publishOnRelease.yml  pushBuilderDocker.yml
docker/: builder.dockerfile
src/: CMakeLists.txt  main.cpp
src/barber-shop/: CMakeLists.txt  barberShop.cpp  barberShop.h
src/barber-shop/barber/: CMakeLists.txt  barber.cpp  barber.h
src/customer-spawner/: CMakeLists.txt  customerSpawner.cpp  customerSpawner.h
test/: CMakeLists.txt  test.cpp
test/barber-shop/: CMakeLists.txt  barberShopTest.cpp
test/barber-shop/barber/: CMakeLists.txt  barberTest.cpp
test/customer-spawner/: CMakeLists.txt  customerSpawnerTest.cpp
